styles/sass/tier.scss
// * tier grid

.tier-grid {
    margin-top: 30px;
    padding: 30px;
    font-family: Roboto, Arial, Helvetica, sans-serif;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    column-gap: 50px;
    .tier__top {
        border-radius: 20px 20px 0 0;
        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
        padding: 30px 25px;
        background: #197360;
        height: 250px;
        .tier__title,
        .tier__info {
            color: white;
        }
        .tier__title {
            text-align: center;
            font-weight: 500;
            margin-bottom: 15px;
            font-size: 30px;
        }
        .tier__info {
            font-size: 14px;
            line-height: 23px;
        }
    }
    .tier__bottom {
        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
        border-radius: 0 0 20px 20px;
        padding-bottom: 40px;
        height: 480px;
        .tier__price--one {
            display: flex;
            justify-content: center;
            align-items: center;
            border-bottom: none !important;
            p {
                margin-bottom: 0;
            }
        }
        .tier__price {
            height: 90px;
            margin-top: 15px;
            display: flex;
            padding-bottom: 15px;
            justify-content: space-around;
            width: 95%;
            margin-left: auto;
            margin-right: auto;
            font-size: 20px;
            border-bottom: 1px solid rgba(25, 115, 96, 0.3);
            .tier__price--month,
            .tier__price--year {
                width: 50%;
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
                color: #464646;
                font-weight: 500;
                p {
                    margin-bottom: 3px;
                }
            }
            .tier__price--month {
                border-right: 1px solid rgba(25, 115, 96, 0.3);
            }
        }
        .tier__points {
            margin-top: 25px;
            width: 85%;
            text-align: center;
            margin-left: auto;
            margin-right: auto;
            .tier__point {
                display: flex;
                position: relative;
                margin-top: 15px;
                align-items: center;
                width: 80%;
                margin-left: auto;
                margin-right: auto;
                font-weight: 500;
                p {
                    margin-bottom: 0;
                    margin-left: 15px;
                }
                .asterisk {
                    position: absolute;
                    top: 5px;
                    left: 30px;
                }
            }
        }
        .button__wrapper {
            display: flex;
            flex-direction: column;
            justify-content: center;
            margin-top: 30px;
            .button {
                width: max-content;
                margin: 5px auto;
            }
        }
    }
}

@media (max-width: 1200px) {
    .tier-grid {
        padding: 30px 0;
        column-gap: 30px;
        .tier__top {
            padding: 30px 15px;
        }
        .tier__bottom {
            .tier__points {
                width: 100%;
                .tier__point {
                    width: 70%;
                }
            }
        }
    }
}

@media (max-width: 991px) {
    .tier-grid {
        .tier__top {
            padding: 30px 15px;
            .tier__info {
                line-height: 18px;
            }
        }
        .tier__bottom {
            .tier__price {
                width: 100%;
                font-size: 18px;
            }
            .tier__points {
                width: 95%;
                .tier__point {
                    width: 100%;
                    font-size: 15px;
                }
            }
        }
    }
}

@media (max-width: 767px) {
    .tier-grid {
        grid-template-columns: 1fr 1fr;
        row-gap: 20px;
        margin-top: 20px;
        .tier__top {
            padding: 30px 10px;
            height: 220px;
        }
    }
}

@media (max-width: 600px) {
    .tier-grid {
        grid-template-columns: 1fr;
        .tier__top {
            padding: 30px 40px;
            height: auto;
        }
    }
}

